task comunicazioni #11669 e rendicontazioni #11670
https://easyredmine.3di.it/issues/11669
https://easyredmine.3di.it/issues/11670

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1503,3 +1503,7 @@ li.listStyle-elenco > label{
 	height: 44px;
 }
 
+table.dataTable tbody tr.selected {
+	background-color: #B0BED9 !important;
+}
+
