--- a/src/main/resources/templates/audit/auditShow.html
+++ b/src/main/resources/templates/audit/auditShow.html
@@ -11,10 +11,11 @@
 			<div class="col-xs-12">
 				<div class="x_panel">
 					<div class="x_title">
-						<h2 th:text="#{label.visualizzazione}">label.info_sede</h2>
+						<h2 th:text="#{label.visualizzazione(${visualizzazione})}">label.info_sede</h2>
 						<div class="pull-right buttons-header">
-							<a th:if="${false and mode == null}" class="btn btn-primary pull-right" th:text="#{label.indietro}" th:href="@{|/accreditamento/${sedeWrapper.accreditamentoId}/show|}"></a>
-							<a th:if="${false and mode != null}" class="btn btn-primary pull-right" th:text="#{label.indietro}" th:href="@{|/accreditamento/${sedeWrapper.accreditamentoId}/${mode}|}"></a>
+							<a class="btn btn-primary pull-right"
+									th:href="@{__${returnLink}__}"
+									th:text="#{label.indietro}">Indietro</a>
 						</div>
 						<div class="clearfix"></div>
 					</div>
