--- a/src/main/resources/templates/audit/auditShow.html
+++ b/src/main/resources/templates/audit/auditShow.html
@@ -11,7 +11,7 @@
 			<div class="col-xs-12">
 				<div class="x_panel">
 					<div class="x_title">
-						<h2 th:text="#{label.visualizzazione(${visualizzazione})}">label.info_sede</h2>
+						<h2 th:text="#{label.visualizzazione_withParam(${visualizzazione})}">label.info_sede</h2>
 						<div class="pull-right buttons-header">
 							<a class="btn btn-primary pull-right"
 									th:href="@{__${returnLink}__}"
