Task https://3dinformatica.easyredmine.com/issues/11766 Bug e Protocollo

--- a/src/main/resources/templates/user/userList.html
+++ b/src/main/resources/templates/user/userList.html
@@ -20,6 +20,8 @@
 					<a class="btn btn-primary pull-right" th:href="@{/profile/list}"
 						th:text="#{label.gestione_profili}">label.gestione_profili</a>
 					</th:block>
+					<a class="btn btn-primary pull-right" th:href="@{/home}"
+						th:text="#{label.indietro}">label.indietro</a>
 					<div class="clearfix"></div>
 				</div>
 				<div class="x_content">
