--- a/src/main/resources/templates/evento/eventoList.html
+++ b/src/main/resources/templates/evento/eventoList.html
@@ -213,6 +213,7 @@
 									<a class="btn btn-primary pull-right" th:text="#{label.creazione_evento}" data-toggle="modal" data-target=".modal-scelta-tipologia"></a>
 								</th:block>
 									<a class="btn btn-success pull-right" th:text="#{label.cerca}" th:href="@{/evento/ricerca}"></a>
+									<a class="btn btn-primary pull-right" th:text="#{label.indietro}" th:href="@{/home}"></a>
 							</div>
 						</div>
 						<div class="clearfix"></div>
