--- a/src/main/resources/templates/provider/providerList.html
+++ b/src/main/resources/templates/provider/providerList.html
@@ -326,6 +326,7 @@
 					<div class="x_title">
 						<h2 th:text="#{label.provider_lista}">Lista dei provider</h2>
 						<a class="btn btn-success pull-right" th:text="#{label.cerca}" th:href="@{/provider/ricerca}"></a>
+						<a class="btn btn-primary pull-right" th:text="#{label.indietro}" th:href="@{/home}"></a>
 						<div class="clearfix"></div>
 					</div>
 					<div class="x_content">
