--- a/src/main/resources/templates/comunicazione/comunicazioneList.html
+++ b/src/main/resources/templates/comunicazione/comunicazioneList.html
@@ -14,7 +14,7 @@
 						<div class="pull-right buttons-header">
 							<button class="btn btn-success pull-right" onclick="archiviaSelezionate()" th:text="#{label.archivia_selezionate}" th:if="${tipo == 'notRead'}"></button>
 							<a class="btn btn-primary pull-right"
-									th:href="@{__${returnLink}__}"
+									th:href="@{/comunicazione/dashboard}"
 									th:text="#{label.indietro}">Indietro</a>
 						</div>
 						<div class="clearfix"></div>
