--- a/src/main/resources/templates/comunicazione/comunicazioneShow.html
+++ b/src/main/resources/templates/comunicazione/comunicazioneShow.html
@@ -162,7 +162,7 @@
 									data-toggle="modal" data-target=".modal-response"
 									th:text="#{label.rispondi}">Rispondi</a>
 							<a class="btn btn-primary pull-right"
-									th:href="@{/comunicazione/dashboard}"
+									th:href="@{__${returnLink}__}"
 									th:text="#{label.indietro}">Indietro</a>
 						</div>
 						<div class="clearfix"></div>
