--- a/src/main/resources/templates/evento/eventoEdit.html
+++ b/src/main/resources/templates/evento/eventoEdit.html
@@ -441,7 +441,7 @@
 						<div class="pull-right buttons-header">
 							<div class="dropdown pull-right">
 
-  								<a class="btn btn-primary" th:href="@{|/provider/${eventoWrapper.providerId}/evento/list|}" th:text="#{label.indietro}"></a>
+  								<a class="btn btn-primary" th:href="@{|__${returnLink}__|}" th:text="#{label.indietro}"></a>
 
   								<button class="btn btn-success dropdown-toggle" type="button" data-toggle="dropdown">
 									<span th:text="#{label.menu_azioni}"></span>
