--- a/src/main/resources/templates/fragments/sidebarAndTop.html
+++ b/src/main/resources/templates/fragments/sidebarAndTop.html
@@ -65,7 +65,7 @@
 								</a>
 								<ul class="nav child_menu" style="display: none">
 									<li><a th:href="@{/provider/list/all}" th:text="#{label.provider}">label.provider</a></li>
-									<li><a th:href="@{/evento/list}" th:text="#{label.eventi}"></a></li>
+									<li><a th:href="@{/evento/list/all}" th:text="#{label.eventi}"></a></li>
 									<li><a th:href="@{/user/list}" th:text="#{label.utenti}">label.utenti</a></li>
 									<li><a th:href="@{/seduta/list}" th:text="#{label.lista_sedute}">label.lista_sedute</a></li>
 									<li><a th:href="@{/comunicazione/dashboard}" th:text="#{label.comunicazioni}"></a></li>
