--- a/src/main/resources/templates/relazioneAnnuale/relazioneAnnualeList.html
+++ b/src/main/resources/templates/relazioneAnnuale/relazioneAnnualeList.html
@@ -33,6 +33,7 @@
 							<thead>
 								<tr>
 									<th th:text="#{label.provider}">label.provider</th>
+									<th th:text="#{label.stato}">label.stato</th>
 									<th th:text="#{label.anno_riferimento}">label.anno_riferimento</th>
 									<th th:text="#{label.azioni}">label.azioni</th>
 								</tr>
@@ -40,12 +41,11 @@
 							<tbody th:remove="all-but-first">
 								<tr th:each="relazione, row : ${relazioneList}">
 									<td th:text="${relazione.provider.denominazioneLegale}"></td>
+									<td th:text="#{__${relazione.bozza ? 'label.bozza' : 'label.validata'}__}" th:class="${relazione.bozza ? 'bold red' : 'bold green'}"></td>
 									<td th:text="${relazione.annoRiferimento}"></td>
 									<td>
-										<div class="button-container single">
-											<a th:if="${relazione.isRelazioneModificabile() and (#authentication.principal.account.isProvider() or #authentication.principal.account.isSegreteria())}" class="btn btn-primary btn-table double" th:href="@{|/provider/${relazione.provider.id}/relazioneAnnuale/${relazione.id}/edit|}"><i class="fa fa-pencil"> </i> <span th:text="#{label.inserisci}"> </span></a>
-											<a class="btn btn-info btn-table double" th:href="@{|/provider/${relazione.provider.id}/relazioneAnnuale/${relazione.id}/show|}"><i class="fa fa-eye"> </i> <span th:text="#{label.mostra}"> </span></a>
-										</div>
+										<a th:if="${relazione.isRelazioneModificabile() and (#authentication.principal.account.isProvider() or #authentication.principal.account.isSegreteria())}" class="btn btn-primary btn-table single" th:href="@{|/provider/${relazione.provider.id}/relazioneAnnuale/${relazione.id}/edit|}"><i class="fa fa-pencil"> </i> <span th:text="#{label.inserisci}"> </span></a>
+										<a class="btn btn-info btn-table single" th:href="@{|/provider/${relazione.provider.id}/relazioneAnnuale/${relazione.id}/show|}"><i class="fa fa-eye"> </i> <span th:text="#{label.mostra}"> </span></a>
 									</td>
 								</tr>
 							</tbody>
@@ -65,11 +65,13 @@
 						"ordering" : false,
 						"columnDefs": [ {
 							"targets": 1,
-							"width": "1px",
+							"width": "100px",
 							"sClass": "center"},{
 							"targets": 2,
 							"width": "1px",
-							"sClass": "center"
+							"sClass": "center"},{
+							"targets": 3,
+							"width": "100px",
 						} ]
 					})
 
