--- a/src/main/resources/templates/evento/eventoFSCEdit.html
+++ b/src/main/resources/templates/evento/eventoFSCEdit.html
@@ -558,7 +558,7 @@
 											<div th:attr="data-original-title=#{label.info_tooltip_obiettivo_nazionale}" class="btn btn-default no-margin cursor-default" data-toggle="tooltip" data-placement="top"><i class="fa fa-info-circle"></i></div>
 										</div>
 									</th:block>
-									<th:block th:if="${eventoWrapper.evento.isEventoDaPianoFormativo()}">>
+									<th:block th:if="${eventoWrapper.evento.isEventoDaPianoFormativo()}">
 										<div class="col-lg-5 col-md-7 col-sm-7 col-xs-11">
 											<div th:text="${eventoWrapper.evento.obiettivoNazionale.nome}" class="value-edit"></div>
 										</div>
